# zombrise

./: &1  Cargo.toml  DEPLOYMENT.md  REMOTE_DEPLOYMENT_CHECKLIST.md  Readme.md  SERVER_SETUP.md  SIMPLE_DEPLOY.md  dragon_queen_server.service  nginx-stream.conf  nginx.conf  setup-server.sh  verify_server_setup.sh
.github/workflows/: release.yml
client/: Cargo.toml
client/assets/: character.glb
client/src/: death_screen.rs  main.rs  startup_screen.rs
client/src/map/: mod.rs
scripts/: convert_assets.py
server/: Cargo.toml
server/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs  shared.rs
shared/src/players/: player.rs
shared/src/zombie/: zombie.rs
src/: main.rs  shared.rs
src/client/: death_screen.rs  main.rs  startup_screen.rs
src/client/map/: mod.rs
src/map/: mod.rs
src/players/: player.rs
src/server/: main.rs
src/zombie/: zombie.rs
