[package]
name = "dragon_queen"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.14"
bevy_replicon = "0.27"
bevy_replicon_renet = "0.4"
bevy_rapier3d = "0.27"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"
