[package]
name = "zombrise_client"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrise_shared = { path = "../shared", features = ["client"] }
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "bevy_gltf",
    "serialize",
    "animation",
    "bevy_ui",
    "bevy_winit",
    "bevy_window",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_render",
    "bevy_text",
    "bevy_sprite",
    "png",
    "jpeg",
    "tonemapping_luts",
    "default_font",
    "x11",
    "wayland",
    "bevy_state",
    "zstd_rust",
] }
bevy_core_pipeline = "0.17"
bevy_replicon = "0.36"
bevy_replicon_renet2 = "0.11"
renet2_netcode = "0.11"
bevy_simple_text_input = "0.12"
arboard = "3.6"
avian3d = "0.4"
