[package]
name = "zombrise_client"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrise_shared = { path = "../shared", features = ["client"] }
# Client gets all default Bevy features for full functionality
bevy = { version = "0.17.3", features = ["bevy_remote"] }
bevy_replicon = "0.36.1"
bevy_replicon_renet = "0.12"
renet = "1.2.0"
renet_netcode = "1.2.0"
# bevy_simple_text_input = "0.9"  # TODO: Find Bevy 0.17 compatible version
arboard = "3.6.1"
