[package]
name = "zombrise_server"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrise_shared = { path = "../shared" }
# Headless server - no graphics features needed
bevy = { version = "0.16", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "serialize",
    "bevy_state",
] }
bevy_replicon = "0.33"
bevy_replicon_renet2 = "0.9"
renet2_netcode = "0.9"
bevy_rapier3d = { version = "0.31", default-features = false, features = [
    "dim3",
    "simd-stable",
] }
rand = "0.9.2"
