[package]
name = "zombrise_server"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrise_shared = { path = "../shared" }
# Headless server - no graphics features needed
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "serialize",
    "bevy_state",
    "zstd_rust",
    "bevy_log",
    "bevy_debug_stepping",
] }
bevy_replicon = "0.36"
bevy_replicon_renet2 = "0.11"
renet2_netcode = "0.11"
avian3d = { version = "0.4", default-features = false, features = ["f32"] }
rand = "0.9.2"
