[package]
name = "zombrise_server"
version = "0.1.0"
edition = "2021"

[dependencies]
zombrise_shared = { path = "../shared" }
# Headless server - only essential features, no graphics
bevy = { version = "0.17.3", default-features = false, features = [
    "bevy_asset",
    "bevy_scene",
    "serialize",
    "bevy_state",
] }
bevy_replicon = "0.36.1"
bevy_replicon_renet = "0.12"
bevy_rapier3d = { git = "https://github.com/lukasfri/bevy_rapier", rev = "a5c82f08c86f9fd44430081e7d6ea1a5bb296e8b", default-features = false, features = [
    "dim3",
    "simd-stable",
] }
renet = "1.2.0"
renet_netcode = "1.2.0"
rand = "0.10.0-rc.5"
