[package]
name = "zombrise_shared"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[dependencies]
# Minimal features for both client and server
bevy = { version = "0.16", default-features = false, features = [
    "serialize",
    "bevy_state",
] }
bevy_replicon = "0.33"
bevy_replicon_renet2 = "0.9"
bevy_rapier3d = { version = "0.31", default-features = false, features = [
    "dim3",
    "simd-stable",
] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"

# Optional: only needed for client
bevy_input = { version = "0.16", optional = true }

[features]
default = []
# Client feature includes all graphics dependencies
client = [
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_gltf",
    "bevy/animation",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy_input",
    "bevy_rapier3d/debug-render-3d",
]
