[package]
name = "zombrise_shared"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal features for both client and server
bevy = { version = "0.17", default-features = false, features = [
    "serialize",
    "bevy_state",
] }
bevy_replicon = "0.36"
bevy_replicon_renet2 = "0.11"
avian3d = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.9.2"

# Optional: only needed for client
bevy_input = { version = "0.17", optional = true }

[features]
default = []
# Client feature includes all graphics dependencies
client = [
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_gltf",
    "bevy/animation",
    "bevy/bevy_pbr",
    "bevy/bevy_render",
    "bevy/bevy_core_pipeline",
    "bevy_input",
]
